<resources>
    <string name="app_name">Food Hygiene Ratings</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_guide">User Guide</string>
    <string name="home_enter_business_hint">Enter business name</string>
    <string name="home_enter_place_hint">Street, town or postcode</string>
    <string name="home_name">Name</string>
    <string name="home_place">Place</string>
    <string name="home_empty_query_title">No Name or Place</string>
    <string name="home_empty_query_message">Enter a name and/or place to search for</string>
    <string name="ok">OK</string>
    <string name="menu_results_map">Map</string>
    <string name="menu_details_map">Map</string>
    <string name="menu_main_about">About</string>
    <string name="alert_no_location_title">Location Error</string>
    <string name="alert_no_location_description">Unable to find your current location. Ensure location services are enabled on your device.</string>
    <string name="alert_connection_error_title">Connection Error</string>
    <string name="alert_connection_error_description">Unable to connect to the Food Standards Authority\'s database. Ensure your internet connection is enabled.</string>
    <string name="about_release_notes">RELEASE NOTES</string>
    <string name="about_web">www.mpdbailey.co.uk</string>
    <string name="about_version">Version 1.05.02</string>
    <string name="about_copyright">\u00A92019 MPD Bailey Technology</string>
    <string name="about_header_info">INFO</string>
    <string name="about_header_feedback">HELP OUT</string>
    <string name="about_body_feedback">Keep updates coming by rating the app, your feedback is most welcome. </string>
    <string name="about_button_rate">RATE</string>
    <string name="about_button_send_feedback">FEEDBACK</string>
    <string name="about_button_legal">Legal</string>
    <string name="about_button_feedback_subject">FHR (Android) v1.05 Feedback</string>
    <string name="about_button_feedback_body">Your feedback is most welcome\n *Report Bugs\n *Suggest new features\n *Ask for help\n\n</string>
    <string name="about_tell_a_friend_subject">Take a look at Food Hygiene Ratings</string>
    <string name="about_tell_a_friend_body">https://play.google.com/store/apps/details?id=com.pigdogbay.foodhygieneratings</string>
    <string name="about_header_apps">MORE GREAT APPS</string>
    <string name="about_body_apps">Try out my other Android Apps on Google Play, I recommend Crossword Solver King - it\'s FREE! </string>
    <string name="about_button_more_apps">BROWSE MY APPS</string>
    <string name="about_header_tell">SPREAD THE WORD</string>
    <string name="about_body_tell">Let your friends know about this great app, send them an email, the app is also available for free, for iPhones and iPads on the App Store.</string>
    <string name="about_button_tell">EMAIL FRIENDS</string>
    <string name="web_error">No Web</string>
    <string name="legal_title">Legal</string>
    <string name="legal">
        Contains public sector information licensed under the Open Government Licence v3.0
    \n\nAll information is provided by the live data feed from the Food Standards Agency. If you find any issues with the data please contact the relevant local authority. For more information visit http://www.food.gov.uk
        \n\nUsing this app you agree that MPD Bailey Technology and its agents (Mark Bailey) are not liable for any information shown within the app.
\n\nMPD Bailey Technology and its agents (Mark Bailey) take no responsibility for the actions of any users of this app.
\n\nThe app EXPRESSLY DISCLAIMS ALL WARRANTIES OF ANY KIND, WHETHER EXPRESS OR IMPLIED. The app makes no warranty that (1) THE APP OR THE CONTENT WILL MEET OR SATISFY YOUR REQUIREMENTS (2) THE APP SHALL HAVE NO RESPONSIBILITY FOR ANY DAMAGE TO YOUR PHONE OR TABLET OR LOSS OF DATA THAT RESULTS FROM YOUR USE OF THE APP OR ITS CONTENT.
\n\n
Copyright 2019 MPD Bailey Technology
\n\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n\n
http://www.apache.org/licenses/LICENSE-2.0
\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="about_header_data_policy">DATA POLICY</string>
    <string name="about_body_data_policy">This app uses Google\'s Admob and Firebase analytics to deliver relevant targeted ads to you. To find out more about how Google uses information from this app click on the link below.</string>
    <string name="about_button_google_policy">FIND OUT MORE</string>
    <string name="about_button_privacy_policy">PRIVACY POLICY</string>
    <string name="about_body_privacy_policy">For further information about how this app uses data press the button below to review the Privacy Policy in full.</string>
    <string name="about_button_eu_consent">EU CONSENT</string>
    <string name="about_body_eu_consent">If you are within Europe you may change your Ad personalisation settings.</string>
    <string name="market_pigdogbay_apps" translatable="false">market://search?q=pub:Pig%20Dog%20Bay</string>
    <string name="market_app_url" translatable="false">market://details?id=com.pigdogbay.foodhygieneratings</string>
    <string name="web_app_url" translatable="false">https://play.google.com/store/apps/details?id=com.pigdogbay.foodhygieneratings</string>
    <string name="web_app_url_ios" translatable="false">https://itunes.apple.com/app/id1213783338</string>
    <string name="release_notes_url" translatable="false">https://pigdogbay.blogspot.com/2018/06/food-hygiene-ratings-v102-release-notes.html</string>
    <string name="google_data_policy">https://www.google.com/policies/technologies/partner-sites/</string>
    <string name="user_guide_url">https://pigdogbay.blogspot.com/2018/06/food-hygiene-ratings-guide.html</string>
    <string name="privacy_policy_url">https://pigdogbay.blogspot.com/2018/06/privacy-policy-food-hygiene-ratings.html</string>
    <string name="menu_share">Share</string>
    <string name="share_chooser_title">Share…</string>
    <string name="menu_results_search">Search</string>
    <string name="dialog_map_search_enable_title">Map Searches</string>
    <string name="dialog_map_search_enable_description">The geo-coordinates for each establishment are inaccurate so establishments may not be positioned correctly on the map. Markers may also be stacked on top of each other. See the user guide for more information.</string>
    <string name="dialog_map_search_enable_button">I understand</string>

    <string-array name="hygiene_rating">
        <item>All</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="local_authority_area">
        <item>All</item>
        <item>Durham</item>
        <item>Stoke-On-Trent</item>
    </string-array>

    <string-array name="rating_comparison">
        <item>Equal</item>
        <item>GreaterThanOrEqual</item>
        <item>LessThanOrEqual</item>
    </string-array>

    <string-array name="rating_status">
        <item>All</item>
        <item>Pass</item>
        <item>Improvement Required</item>
        <item>Awaiting Publication</item>
        <item>Awaiting Inspection</item>
        <item>Exempt</item>
    </string-array>

    <string-array name="business_types">
        <item>All</item>
        <item>Takeaway/sandwich shop</item>
        <item>Restaurant/Cafe/Canteen</item>
        <item>Pub/bar/nightclub</item>
        <item>Mobile caterer</item>
        <item>Other catering premises</item>
        <item>Hotel/bed &amp; breakfast/guest house</item>
        <item>Retailers - supermarkets/hypermarkets</item>
        <item>Retailers - other</item>
        <item>Hospitals/Childcare/Caring Premises</item>
        <item>School/college/university</item>
        <item>Importers/Exporters</item>
        <item>Farmers/growers</item>
        <item>Distributors/Transporters</item>
        <item>Manufacturers/packers</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings for Search -->
    <string name="pref_header_search_sync">Data</string>

    <string name="pref_title_search_timeout">Search Timeout</string>
    <string-array name="pref_search_timeout_titles">
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_search_timeout_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>
    <string name="pref_search_default_timeout_value">30</string>

    <string name="pref_header_search">Search</string>

    <string name="pref_title_search_radius">Search Radius (Near Me / Map)</string>
    <string-array name="pref_search_radius_titles">
        <item>1 mile</item>
        <item>2 miles</item>
        <item>3 miles</item>
        <item>4 miles</item>
        <item>5 miles</item>
        <item>6 miles</item>
        <item>7 miles</item>
        <item>8 miles</item>
        <item>9 miles</item>
        <item>10 miles</item>
    </string-array>
    <string-array name="pref_search_radius_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="pref_search_radius_default">1</string>

    <string name="pref_title_search_results_text_filter">Results Text Filter</string>
    <string-array name="pref_search_results_text_filter_titles">
        <item>Search for text in the name only</item>
        <item>Search for text in the name and address</item>
    </string-array>
    <string-array name="pref_search_results_text_filter_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_search_default_results_text_filter">1</string>
    <string name="main_menu_search">Search</string>

    <string name="pref_title_map_enable_search">Enable Map Searches</string>
    <string name="menu_results_filter_all">All Ratings</string>
    <string name="menu_results_filter_0_stars">0 Star Rating</string>
    <string name="menu_results_filter_1_stars">1 Star Rating</string>
    <string name="menu_results_filter_2_stars">2 Star Rating</string>
    <string name="menu_results_filter_3_stars">3 Star Rating</string>
    <string name="menu_results_filter_4_stars">4 Star Rating</string>
    <string name="menu_results_filter_5_stars">5 Star Rating</string>
    <string name="menu_results_filter_improvement_required">Improvement Required</string>
    <string name="menu_results_filter_pass">Pass</string>
    <string name="menu_results_filter_pass_eat_safe">Pass Eat Safe</string>
    <string name="menu_results_filter_not_rated">Not Rated</string>
    <string name="pref_title_show_place_info">Show information from Google Places</string>
    <string name="menu_main_advanced_search">Advanced Search</string>
</resources>
