<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pigdogbay.foodhygieneratings.AboutFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/AboutHeader"
            android:text="@string/about_header_info"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_version"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_web"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_copyright"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aboutBtnReleaseNotes"
                style="@style/AboutButton"
                android:text="@string/about_release_notes"
                />

            <Button
                android:id="@+id/aboutBtnLegal"
                style="@style/AboutButton"
                android:text="@string/about_button_legal"
                />
        </LinearLayout>

        <TextView
            style="@style/AboutHeader"
            android:text="@string/about_header_feedback"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_body_feedback"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aboutBtnSendFeedback"
                style="@style/AboutButton"
                android:text="@string/about_button_send_feedback"
                android:layout_marginRight="8dp"
                />

            <Button
                android:id="@+id/aboutBtnRate"
                style="@style/AboutButton"
                android:layout_marginRight="8dp"
                android:text="@string/about_button_rate"
                />
        </LinearLayout>

        <TextView
            style="@style/AboutHeader"
            android:text="@string/about_header_apps"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_body_apps"/>
        <Button
            android:id="@+id/aboutBtnMoreApps"
            android:layout_marginRight="24dp"
            style="@style/AboutButton"
            android:text="@string/about_button_more_apps"
            />

        <TextView
            style="@style/AboutHeader"
            android:text="@string/about_header_tell"/>

        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_body_tell"/>
        <Button
            android:id="@+id/aboutBtnTellFriends"
            android:layout_marginRight="24dp"
            style="@style/AboutButton"
            android:text="@string/about_button_tell"
            />
        <!--Data Policy-->
        <TextView
            style="@style/AboutHeader"
            android:text="@string/about_header_data_policy" />
        <TextView
            style="@style/AboutBodyText"
            android:text="@string/about_body_data_policy"/>
        <Button
            android:layout_marginRight="24dp"
            style="@style/AboutButton"
            android:id="@+id/aboutBtnGooglePolicy"
            android:text="@string/about_button_google_policy"/>

    </LinearLayout>
</ScrollView>