<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_results_search"
        android:title="@string/menu_results_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_24dp"
        app:actionViewClass="android.widget.SearchView"
        />
    <group
        android:id="@+id/menu_results_filter_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_results_filter_all"
            android:title="@string/menu_results_filter_all"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_0_stars"
            android:title="@string/menu_results_filter_0_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_1_stars"
            android:title="@string/menu_results_filter_1_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_2_stars"
            android:title="@string/menu_results_filter_2_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_3_stars"
            android:title="@string/menu_results_filter_3_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_4_stars"
            android:title="@string/menu_results_filter_4_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_5_stars"
            android:title="@string/menu_results_filter_5_stars"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_improvement_required"
            android:title="@string/menu_results_filter_improvement_required"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_pass"
            android:title="@string/menu_results_filter_pass"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_pass_eat_safe"
            android:title="@string/menu_results_filter_pass_eat_safe"
            android:checkable="true"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_results_filter_not_rated"
            android:title="@string/menu_results_filter_not_rated"
            android:checkable="true"
            app:showAsAction="never"
            />
    </group>
</menu>